// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonField display invalid message 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <div
      class="form-group"
    >
      <div
        class="controls"
      >
        <textarea
          aria-invalid="true"
          class="is-invalid form-control"
          id="id-input-2"
          rows="6"
        >
          some input
        </textarea>
        <div
          class="invalid-feedback"
        >
          Invalid JSON : changes will not be saved until the JSON is fixed
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonField should render input 1`] = `
<div
  class="InputField form-group"
  color=""
>
  <div
    class=""
  >
    <div
      class="form-group"
    >
      <div
        class="controls"
      >
        <textarea
          class="form-control"
          id="id-input-1"
          rows="6"
        >
          "value"
        </textarea>
      </div>
    </div>
  </div>
</div>
`;
